# xiaoyuzhou-juicer

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.en.md  README.md  SECURITY.md  SKILL.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
agents/: openai.yaml
config/: archive.example.ini  token.example.txt
docs/demo/: README.md
scripts/: install_skill.py  xyz_fetch.py  xyz_render.py  xyz_validate.py
tests/: test_xyz_fetch.py  test_xyz_render_validate.py
